# arch-ecs

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  main.cpp
include/archecs/: arch_ecs.hpp  archetype.hpp  command_buffer.hpp  entity.hpp  queries.hpp  system.hpp  type_id.hpp  update_group.hpp  world.hpp
include/archecs/internal/: byte_vector.hpp  constructor_vtable.hpp  dynamic_vector.hpp  helper_macros.hpp  helpers.hpp  rtt_vector.hpp  scheduler.hpp
test/: CMakeLists.txt  archetype_test.cpp  byte_vector_test.cpp  command_buffer_test.cpp  doctest.h  group_test.cpp  query_test.cpp  rtt_vector_test.cpp  scheduler_test.cpp  world_test.cpp
